Add lunches checking rake task.

--- a/config/locales/ua.yml
+++ b/config/locales/ua.yml
@@ -7,11 +7,14 @@ ua:
     members:
       not_found: 'Не знайдено жодного користувача!'
       added: 'Зареєстровані користувачі: %{members}'
+      without_lunch: '%{members} завтра ви безобідні :D'
+    meal: '* %{meal};'
   help: |
           Список доступних конанд:
 
           /lunch_me - ваш обід (якщо ім'я в замовленнях співпадає з  ім'ям в телеграмі)
           /lunch - обіди зареєстрованих користувачів
+          /lunch_check - перевірка замовлення на завтра
           /lunch_members - користувачі зареєстровані в список обідів
           /lunch_register_member - зареєструвати користувача (можна перерахувати кількох через кому)
           /lunch_remove_member - видалити користувача (можна перерахувати кількох через кому)
